devops/terraform/google-cloud/gke-k8s-pilot/k8s-yaml/my-mc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-mc-deployment
spec:
  selector:
    matchLabels:
      app: products
      department: sales
  replicas: 3
  template:
    metadata:
      labels:
        app: products
        department: sales
    spec:
      containers:
        - name: hello
          image: "us-docker.pkg.dev/google-samples/containers/gke/hello-app:1.0"
        - name: hello-again
          image: "us-docker.pkg.dev/google-samples/containers/gke/hello-app:2.0"
